@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Memcached-libmemcached
-version:            0.4405
+version:            0.4406
 abstract:           Thin fast full interface to the libmemcached client API
 author:
     - Tim Bunce <Tim.Bunce@pobox.com>
